--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <title>Klangauszeit bei Jessica</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
