Update styles for body and header in index.html

--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
     body {
       margin: 0;
       font-family: "Georgia", serif;
-      background: #f7f5f2;
-      color: #3f3f3f;
+      background: #f4f6f3;
+      color: #2f3a33;
       line-height: 1.7;
     }
     header {
-      background: linear-gradient(180deg, #e6ebe6, #f7f5f2);
-      padding: 80px 20px;
+      background–color:#dfe8e2;
+      padding: 3rem 1rem;
       text-align: center;
     }
+    h1,h2{
+     color: #4f6b5a;
     header h1 {
       font-size: 2.6em;
       margin-bottom: 10px;
