--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
       text-align: center;
       padding: 40px 20px;
       font-size: 0.95em;
+      .symbol {
+  font-size: 2rem;
+  text-align: center;
+  margin-top: 1rem;
+  color: #6b8f7b;
+}
+      
     }
   </style>
 </head>
