Refactor box styles in index.html
Updated box styles for improved appearance.

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     }
     .box {
       background: #ffffff;
-      padding: 2rem;
-      border-radius: 20p;
-      box-shadow: 0 10px 25px rgba(47, 58, 51, 0.08);
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05):
       margin–bottom: 2rem;
     }
     footer {
