--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Klangauszeit bei Jessica</title>
   <link rel="stylesheet" href="style.css">
 </head>
+  <link rel="stylesheet" href="style.css">
 <body>
 <html lang="de">
 <head>
