--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       font-size: 2.6em;
       margin-bottom: 10px;
       font-weight: normal;
+      <p class="symbol">🌿</p>
     }
     header p {
       font-size: 1.2em;
