Refactor index.html for improved structure and clarity
Removed duplicate head elements and cleaned up HTML structure. Updated text for clarity and consistency.

--- a/index.html
+++ b/index.html
@@ -2,81 +2,20 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Klangauszeit bei Jessica</title>
   <link rel="stylesheet" href="style.css">
 </head>
-  <link rel="stylesheet" href="style.css">
-<body>
-<html lang="de">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Klangauszeit bei Jessica</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: "Georgia", serif;
-      background: #f4f6f3;
-      color: #2f3a33;
-      line-height: 1.7;
-    }
-    header {
-      background–color:#dfe8e2;
-      padding: 3rem 1rem;
-      text-align: center;
-    }
-    h1,h2{
-     color: #4f6b5a;
-    header h1 {
-      font-size: 2.6em;
-      margin-bottom: 10px;
-      font-weight: normal;
-      <p class="symbol">🌿</p>
-    }
-    header p {
-      font-size: 1.2em;
-      max-width: 600px;
-      margin: auto;
-    }
-    section {
-      max-width: 900px;
-      margin: auto;
-      padding: 60px 20px;
-    }
-    h2 {
-      font-weight: normal;
-      font-size: 2em;
-      margin-bottom: 20px;
-      color: #4f6f64;
-    }
-    .box {
-      background: #ffffff;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05):
-      margin–bottom: 2rem;
-    }
-    footer {
-      background: #e6ebe6;
-      text-align: center;
-      padding: 40px 20px;
-      font-size: 0.95em;
-      .symbol {
-  font-size: 2rem;
-  text-align: center;
-  margin-top: 1rem;
-  color: #6b8f7b;
-}
-      
-    }
-  </style>
-</head>
+
 <body>
 
 <header>
-  <h1>Klangauszeit bei Jessica für Frauen und Kinder</h1>
-  <p>Ein Raum für Ruhe, Entspannung und neue Balance –  
-     Zeit zum Loslassen und Ankommen.</p>
+  <h1>Klangauszeit bei Jessica</h1>
+  <p class="symbol">🌿</p>
+  <p>
+    Ein Raum für Ruhe, Entspannung und neue Balance –  
+    Zeit zum Loslassen und Ankommen.
+  </p>
 </header>
 
 <section>
@@ -96,11 +35,9 @@
   <h2>Ablauf einer Klangauszeit</h2>
   <div class="box">
     <p>
-      Jede Klangauszeit beginnt mit einem kurzen Vorgespräch, um
-      deine Bedürfnisse wahrzunehmen. Anschließend darfst du in
-      bequemer Kleidung liegen und dich ganz den Klängen hingeben.
-      Nach der Klangmassage bleibt ausreichend Zeit zum Nachspüren
-      und Ankommen.
+      Jede Klangauszeit beginnt mit einem kurzen Vorgespräch.
+      Anschließend darfst du in bequemer Kleidung liegen und dich
+      ganz den Klängen hingeben. Danach bleibt Zeit zum Nachspüren.
     </p>
   </div>
 </section>
@@ -111,9 +48,7 @@
     <p>
       Mein Name ist Jessica Schmidt. Mit viel Achtsamkeit und Ruhe
       begleite ich Menschen auf ihrem Weg zu mehr Entspannung,
-      innerer Balance und Wohlbefinden.  
-      Die Klangauszeit ist für mich ein geschützter Raum,
-      in dem du einfach sein darfst.
+      innerer Balance und Wohlbefinden.
     </p>
   </div>
 </section>
@@ -122,8 +57,6 @@
   <h2>Ort der Klangauszeit</h2>
   <div class="box">
     <p>
-      Die Klangmassage findet in ruhiger Atmosphäre statt unter folgender Anschrift:
-      <br><br>
       <strong>
         Jessica Schmidt<br>
         Tünternweg 5<br>
@@ -137,9 +70,8 @@
   <h2>Kontakt</h2>
   <div class="box">
     <p>
-      Für Terminvereinbarungen oder Fragen melde dich gern persönlich.
-      <br><br>
-      (Per Telefon oder WhatsApp unter der 0175–1582381
+      Für Terminvereinbarungen oder Fragen melde dich gern persönlich.<br><br>
+      Telefon / WhatsApp: 0175&nbsp;1582381
     </p>
   </div>
 </section>
