Add pause divs between sections in index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </p>
   </div>
 </section>
-
+<div class="pause"></div>
 <section>
   <h2>Ablauf einer Klangauszeit</h2>
   <div class="box">
@@ -41,7 +41,7 @@
     </p>
   </div>
 </section>
-
+<div class="pause"></div>
 <section>
   <h2>Über mich</h2>
   <div class="box">
