Add Impressum section with contact details

--- a/index.html
+++ b/index.html
@@ -75,6 +75,56 @@
     </p>
   </div>
 </section>
+  <section>
+  <h2>Impressum</h2>
+  <div class="box">
+    <p>
+      Angaben gemäß § 5 TMG
+    </p>
+
+    <p>
+      <strong>Jessica Schmidt</strong><br>
+      Tünternweg 5<br>
+      26736 Loquard
+    </p>
+
+    <p>
+      Telefon: 0175&nbsp;1582381
+    </p>
+
+    <p>
+      Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:<br>
+      Jessica Schmidt<br>
+      Tünternweg 5<br>
+      26736 Loquard
+    </p>
+  </div>
+</section>
+  <section>
+  <h2>Impressum</h2>
+  <div class="box">
+    <p>
+      Angaben gemäß § 5 TMG
+    </p>
+
+    <p>
+      <strong>Jessica Schmidt</strong><br>
+      Tünternweg 5<br>
+      26736 Loquard
+    </p>
+
+    <p>
+      Telefon: 0175&nbsp;1582381
+    </p>
+
+    <p>
+      Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:<br>
+      Jessica Schmidt<br>
+      Tünternweg 5<br>
+      26736 Loquard
+    </p>
+  </div>
+</section>
 
 <footer>
   © 2026 Klangauszeit bei Jessica · Loquard
