Add Datenschutz section to index.html
Added a new section for data protection information, detailing data handling practices and user rights.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,51 @@
 
 <footer>
   © 2026 Klangauszeit bei Jessica · Loquard
+  <section>
+  <h2>Datenschutz</h2>
+  <div class="box">
+    <p>
+      Der Schutz deiner persönlichen Daten ist mir ein wichtiges Anliegen.
+      Personenbezogene Daten werden auf dieser Website nur im notwendigen
+      Umfang verarbeitet.
+    </p>
+
+    <p>
+      <strong>Verantwortliche Stelle</strong><br>
+      Jessica Schmidt<br>
+      Tünternweg 5<br>
+      26736 Loquard
+    </p>
+
+    <p>
+      <strong>Erhebung und Verarbeitung von Daten</strong><br>
+      Diese Website dient ausschließlich der Information. Beim Besuch
+      der Website werden durch den Hosting-Anbieter automatisch
+      Informationen erfasst (z. B. IP-Adresse, Datum und Uhrzeit des Zugriffs).
+      Diese Daten dienen der technischen Bereitstellung der Website
+      und der Sicherheit.
+    </p>
+
+    <p>
+      <strong>Kontaktaufnahme</strong><br>
+      Wenn du mich per Telefon oder WhatsApp kontaktierst, werden deine
+      Angaben ausschließlich zur Bearbeitung deiner Anfrage verwendet
+      und nicht an Dritte weitergegeben.
+    </p>
+
+    <p>
+      <strong>Deine Rechte</strong><br>
+      Du hast jederzeit das Recht auf Auskunft über deine gespeicherten
+      personenbezogenen Daten, deren Herkunft und Empfänger sowie den
+      Zweck der Datenverarbeitung. Außerdem hast du das Recht auf
+      Berichtigung, Sperrung oder Löschung dieser Daten.
+    </p>
+
+    <p>
+      Bei Fragen zum Datenschutz kannst du dich jederzeit an mich wenden.
+    </p>
+  </div>
+</section>
 </footer>
 
 </body>
